# libuv-cmake

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  i586-mingw32msvc.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
